@@ -1,5 +1,9 @@
 2013-11-18  Julien Bect  <julien.bect@supelec.fr>
 
+	Remove TRUE_NOISE_STD in example 'kb03'.
+
+	* examples/01_kriging_basics/stk_example_kb03.m: modified
+
 	Use the variance returned by stk_param_init for noiseless data.
 
 	* examples/01_kriging_basics/stk_example_kb02.m: modified
